adressed an issue

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Vineet Kumar Sahu | FullStack Developer</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div id="home" class="container">
